@@ -1,14 +1,14 @@
 .\"     Title: tdc
 .\"    Author: Michael Lustfield <michael@lustfield.net>
-.\"      Date: 04/21/2014
+.\"      Date: 10/06/2014
 .\"    Manual: User Commands
-.\"    Source: tdc 1.4
+.\"    Source: tdc 1.6
 .\"
-.TH "TDC" "1" "04/21/2014" "tdc 1\.4" "User Commands"
+.TH "TDC" "1" "10/06/2014" "tdc 1\.6" "User Commands"
 .\" disable hyphenation
-.NH
+.nh
 .\" disable justification (adjust text to left margin only)
-.AD l
+.ad l
 .SH "NAME"
 tdc - stand alone clock that is designed to run as a dock application but is not required to
 .SH "SYNOPSIS"
