@@ -1,7 +1,13 @@
+Changes with tdc 1.6                                                06 Oct 2016
+
+  * Re-release of broken 1.5 release.
+  * Fixed a potential buffer overflow vulnerability.
+  * Updated documentation.
+
 Changes with tdc 1.4                                                12 Jul 2016
 
-  * Relocated home of source code
-  * Updated documentation
+  * Relocated home of source code.
+  * Updated documentation.
 
 Changes with tdc 1.3                                                21 Apr 2014
 
@@ -13,7 +19,7 @@ Changes with tdc 1.3                                                21 Apr 2014
   * Current day in calendar displays correctly.
   * Makefile cleaned up.
 
-Changes wtih tdc 1.2                                                05 Mar 2011
+Changes with tdc 1.2                                                05 Mar 2011
 
   * Fixed PREFIX in Makefile.
   * First version ready for distribution.
